# snek5000

./: .editorconfig  .exrc  .git_archival.txt  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yml  .vimrc  AUTHORS  AUTHORS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  Makefile  README.md  Snakeconfig.yml  Snakefile  activate.sh  environment.yml  environment_noversion.yml  noxfile.py  pyproject.toml  requirements-tests.txt  requirements.in  requirements.txt  setup.cfg  setup.py
.github/: CODEOWNERS  FUNDING.yml
.github/workflows/: build.yaml  deploy.yaml  docs.yml  draft-pdf.yml  tests.yml
docs/: Doxyfile  Makefile  abl.rst  autosum.rst  boundary_cond.rst  conf.py  configuring.rst  filtering.rst  html_theme_options.py  index.rst  install.rst  install_opt.rst  internals.rst  intro.md  license.rst  ls_intersphinx_targets.py  ls_no_extensions.py  nek5000.rst  packaging.rst  release.md  release.rst  requirements.txt  roadmap.rst  test-requirements.txt  tuto_cbox.md  tuto_cbox.myst.md  tuto_config.rst  tuto_load_print_stdout.md  tuto_packaging.rst  tuto_phill.md  tuto_phill.myst.md  tuto_phill_make.myst.md  tuto_phill_script.myst.md  tuto_phill_setup.md  tuto_phill_setup.myst.md  tuto_simul_cbox.md  tuto_simul_exec.md  tuto_simul_setup.md  tuto_tgv.md  tuto_tgv.myst.md  (+2 more)
docs/_static/: doxy_style.css
docs/debug/gh-163-snakemake-resources/: Snakefile  noxfile.py  run.py  run.sh
docs/dev/: edit_tutorials.md  filtering.rst  goodies.myst.md  howto_doc.md  howto_test.md  index.rst  nek.rst  output.rst  params.rst  phys_fields.rst  release.md  release.rst  roadmap.rst  solver.rst
docs/examples/scripts/: simul_cbox_movie.py  simul_phill_short.py  simul_tgv_short.py  tuto_cbox.py  tuto_phill.py  tuto_simul_cbox.py  tuto_simul_tgv.py  tuto_tgv.py
docs/examples/snek5000-canonical/: .copier-answers.yml  LICENSE  README.md  pyproject.toml  setup.cfg
docs/examples/snek5000-canonical/src/snek5000_canonical/: Snakefile  __init__.py  canonical.usr.f  output.py  phys_fields.py  solver.py
docs/examples/snek5000-canonical/src/snek5000_canonical/templates/: __init__.py
docs/examples/snek5000-canonical/tests/: conftest.py  test_slow_simul.py  test_solver.py
docs/examples/snek5000-tgv/: README.md  setup.cfg
docs/examples/snek5000-tgv/src/snek5000_tgv/: Snakefile  __init__.py  output.py  solver.py  tgv.usr.f
docs/examples/snek5000-tgv/src/snek5000_tgv/templates/: __init__.py
docs/how-to/: adaptive_time_step.md  archive-simulation-data.md  config-c-fortran-compilers.md  control-fortran-warnings.md  edit_tutorials.md  export-sans-snek5000.myst.md  history_points.md  index.md  load_plot_log_data.md  load_state_stat_files.md  read-write-par-files.md  rebuild-nek.md  restart.md  restart.myst.md  run-background-foreground.md  snek-make.myst.md  templates.md
docs/ipynb/: tuto_simul_setup.ipynb
docs/ipynb/executed/: tuto_load_print_stdout.ipynb  tuto_simul.ipynb  tuto_simul_cbox.ipynb  tuto_simul_exec.ipynb
docs/joss_paper/: Makefile  codemeta.json  generate_metadata.py  joss-defaults.yaml  paper.bib  paper.md  state_of_art.md
requirements/: README.md  default.nix  dev.txt  docs.in  docs.txt  environment.yaml  main.txt  tests-editable.txt  tests.in  tests.txt  vcs_packages.in
src/eturb/: __init__.py  clusters.py  const.py  info.py  log.py  magic.py  make.py  operators.py  params.py  state.py  util.py
src/eturb/output/: phys_fields.py  print_stdout.py
src/eturb/solvers/: __init__.py  abl.py  base.py  info.py  kth.py
src/eturb/util/: __init__.py  archive.py
src/snek5000/: __init__.py  clusters.py  config.py  const.py  info.py  log.py  magic.py  make.py  operators.py  params.py
src/snek5000/assets/: SIZE.j2  __init__.py  compile.sh.j2  compiler.smk  default_configfile.yml  internal.smk  io.smk  nek5000.smk
src/snek5000/output/: __init__.py  base.py  history_points.py  phys_fields.py  print_stdout.py  remaining_clock_time.py  simple_csv.py  spatial_means.py
src/snek5000/output/readers/: __init__.py  pymech_.py  try_paraview_.py
src/snek5000/reader/: __init__.py  base.py  pm.py  pv.py
src/snek5000/resources/: SIZE.j2  __init__.py  box.j2  compiler.smk  default_configfile.yml  internal.smk  io.smk  makefile_usr.inc.j2
src/snek5000/solvers/: __init__.py  base.py  kth.py
src/snek5000/util/: __init__.py  archive.py  console.py  files.py  gfortran_log.py  restart.py  smake.py
tests/: .editorconfig  conftest.py  test_archive.py  test_cbox.py  test_clusters.py  test_config.py  test_console.py  test_files.py  test_load_simul.py  test_magic.py  test_make.py  test_oper.py  test_params.py  test_resources.py  test_restart.py  test_restart_command.py  test_sim_executed.py  test_solver.py  test_tgv.py  test_tuto_packaging.py  test_util.py
tests/test_oper/: test_box_2d.box  test_box_template.box  test_size_2d.f  test_size_template.f
