[build-system]
requires = ["setuptools>=49.5.0", "wheel", "setuptools_scm[toml]>=6.0", "setuptools_scm_git_archive"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/snek5000/_version.py"
write_to_template = "__version__ = \"{version}\"\n"

[tool.pytest.ini_options]
addopts = "--cov=snek5000 --cov=tests --no-cov-on-fail"

[tool.isort]
known_first_party = ["fluiddyn", "fluidsim", "snek5000"]
# multi_line_output = 3
profile = "black"
line_length = 82
