[build-system]
requires = [
    "setuptools>=49.5.0",
    "wheel",
    "setuptools_scm[toml]>=7.0.0",
    ]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/snek5000/_version.py"

[tool.ruff]
ignore = ["E501", "W505"]

[tool.ruff.isort]
known-first-party = ["fluiddyn", "fluidsim_core", "snek5000"]

[tool.coverage.run]
source = ["snek5000", "snek5000_canonical", "./tests"]
data_file = ".coverage/coverage"
omit = [
    "*/try_*.py",
    "*/_old_*.py"
]

# Note
# ----
# This seemed the right way to run tests. Install out of place and run tests,
# but report coverage to the source code. However, measuring coverage of
# multiple packages (inc. packages in docs/examples) when installed this way
# seems to be unsupported by Coverage.py.
#
# [tool.coverage.paths]
# source = [
#     "./src/",
#     ".nox/tests-cov/lib/python*/site-packages/",
# ]


[tool.coverage.report]
show_missing = true
exclude_lines = [
    "if __name__ == .__main__.:",
    'if "sphinx" in sys.modules:',
    "raise FileNotFoundError",
    "raise NotImplementedError",
    "raise ValueError",
    "except KeyError:",
    "except ImportError:",
    "except AttributeError:",
    "except NotImplementedError:",
    "except StopIteration:",
]

[tool.coverage.html]
directory = ".coverage/html"
