[metadata]
author = Ashwin Vishnu Mohanan
author_email = ashwinvis+gh@protonmail.com
url = https://github.com/exabl/snek5000
name = snek5000
description = Python framework for Nek5000
long_description = file: README.md, HISTORY.md
long_description_content_type = text/markdown
license = BSD-3-Clause
license_file = LICENSE
classifiers =
        Development Status :: 4 - Beta
        Intended Audience :: Science/Research
        License :: OSI Approved :: BSD License
        Natural Language :: English
        Programming Language :: Python :: 3
project-urls =
    documentation = https://snek5000.readthedocs.io

[options]
python_requires = >= 3.6
package_dir=
    =src
packages=find:
install_requires =
    snakemake != 5.23.*, != 5.24.*
    fluidsim >= 0.3.3
    jinja2
    inflection
    importlib_resources; python_version < "3.7"
setup_requires =
    setuptools_scm

[options.extras_require]
docs =
    sphinx
    # recommonmark
    myst-parser
    myst-nb
    sphinx-copybutton
    sphinx_rtd_theme
    breathe
    setuptools_scm

tests =
    pytest
    pytest-cov
    ipython
    phill @ git+https://github.com/exabl/snek5000-phill.git

hpc =
    %(tests)s
    click

dev =
    %(docs)s
    %(hpc)s
    colorlog
    pdbpp
    rope
    python-language-server
    fortran-language-server
    pre-commit
    twine
    readme-renderer[md]

[options.packages.find]
where=src

[options.package_data]
snek5000 = assets/*.smk, assets/*.yml, assets/*.j2

[flake8]
ignore = E501,W503,W505
max-line-length = 82

[isort]
known_first_party = fluiddyn, fluidsim, snek5000, abl
multi_line_output = 3

## Not possible because we have a git dependency in tests
# [bdist_wheel]
# universal = 1
