[metadata]
author = Ashwin Vishnu Mohanan
author_email = ashwinvis+gh@protonmail.com
url = https://github.com/exabl/snek5000
name = snek5000
description = Python framework for Nek5000
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD-3-Clause
license_file = LICENSE
classifiers =
        Development Status :: 4 - Beta
        Intended Audience :: Science/Research
        License :: OSI Approved :: BSD License
        Natural Language :: English
        Programming Language :: Python :: 3 :: Only
        Topic :: Scientific/Engineering
project-urls =
    Bug Tracker = https://github.com/exabl/snek5000/issues
    Documentation = https://snek5000.readthedocs.io
    Changelog = https://snek5000.readthedocs.io/en/latest/CHANGELOG.html

[options]
python_requires = >= 3.6
package_dir=
    =src
packages=find:
install_requires =
    snakemake >= 6.1.1
    fluidsim-core >= 0.4.1
    jinja2
    inflection
    importlib_resources; python_version < "3.7"

[options.entry_points]
snek5000.solvers =
    nek = snek5000.solvers.base
    kth = snek5000.solvers.kth

[options.extras_require]
docs =
    sphinx
    myst-parser
    myst-nb
    sphinx-copybutton
    sphinx-material
    breathe
    setuptools_scm

tests =
    pytest
    pytest-cov
    pytest-datadir
    ipython

hpc =
    %(tests)s
    click

dev =
    %(docs)s
    %(hpc)s
    colorlog
    pdbpp
    rope
    python-language-server
    fortran-language-server
    pre-commit>=2.9.0
    twine
    readme-renderer[md]

[options.packages.find]
where=src

[options.package_data]
snek5000 = assets/*.smk, assets/*.yml, assets/*.j2

[flake8]
ignore = E501,W503,W505
max-line-length = 82

[isort]
known_first_party = fluiddyn, fluidsim, snek5000, abl
multi_line_output = 3

## Not possible because we have a git dependency in tests
# [bdist_wheel]
# universal = 1
