[metadata]
author = Ashwin Vishnu Mohanan
author_email = ashwinvis+gh@protonmail.com
url = https://github.com/snek5000/snek5000
name = snek5000
description = Python framework for Nek5000
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD-3-Clause
license_files = LICENSE
classifiers =
        Development Status :: 5 - Production/Stable
        Intended Audience :: Science/Research
        License :: OSI Approved :: BSD License
        Natural Language :: English
        Programming Language :: Python :: 3 :: Only
        Programming Language :: Python :: 3.8
        Programming Language :: Python :: 3.9
        Programming Language :: Python :: 3.10
        Topic :: Scientific/Engineering
project-urls =
    Bug Tracker = https://github.com/snek5000/snek5000/issues
    Documentation = https://snek5000.readthedocs.io
    Changelog = https://snek5000.readthedocs.io/en/latest/CHANGELOG.html

[options]
python_requires = >= 3.8
package_dir=
    =src
packages=find:
install_requires =
    snakemake >= 7.15.2
    fluiddyn >= 0.4.0
    fluidsim-core >= 0.7.0rc0
    pymech >= 1.4.1
    pandas
    jinja2
    inflection
    pyyaml
    filelock

[options.entry_points]
snek5000.solvers =
    nek = snek5000.solvers.base
    kth = snek5000.solvers.kth
console_scripts =
  snek-generate-config = snek5000.config:ensure_config_file
  snek-info = snek5000.util.console:print_versions
  snek-ipy-load = snek5000.util.console:start_ipython_load_sim
  snek-make = snek5000.make:snek_make

[options.extras_require]
docs =
    sphinx
    myst-parser
    myst-nb
    docutils <0.18, >=0.14  # sphinx, myst-parser and myst-nb is incompatible with docutils==0.18
    sphinx-autobuild
    sphinx-copybutton
    sphinx-inline-tabs
    furo
    breathe
    setuptools_scm
    nbdime
    # https://github.com/sphinx-doc/sphinx/issues/8198
    pygments >= 2.4.1
    linkify-it-py
    scipy
    # TODO: add these solvers when they are on PyPI.
    # phill
    # snek5000-cbox

tests =
    nox
    pytest
    coverage[toml]
    pytest-cov
    pytest-datadir
    pytest-mock
    ipython

hpc =
    %(tests)s
    click

dev =
    %(docs)s
    %(hpc)s
    rich
    pdbpp
    python-lsp-server
    fortran-language-server
    pre-commit>=2.9.0
    twine
    build

[options.packages.find]
where=src

[options.package_data]
snek5000 = resources/*.smk, resources/*.yml, resources/*.j2, assets/*

[flake8]
ignore = E203,E501,W503,W505
max-line-length = 82

## Not possible because we have a git dependency in tests
# [bdist_wheel]
# universal = 1
