[metadata]
name = snek5000_canonical
version = 0.0.2
description = My Nek5000 user files
long_description = file: README.md
long_description_content_type = text/markdown
license = ...
license_file = LICENSE

[options]
package_dir=
    =src
packages=find:
install_requires =
    snek5000 >= 0.9.0rc3

[options.entry_points]
snek5000.solvers =
    canonical = snek5000_canonical.solver

[options.packages.find]
where=src

[options.package_data]
snek5000_canonical = *.usr.f, *.par.cfg, Snakefile, etc/*.yml
