[metadata]
name = snek5000-tgv
version = 0.1.0
description = Taylor-Green vortex
long_description = file: README.md
long_description_content_type = text/markdown
license = ...
license_file = LICENSE

[options]
package_dir=
    =src
packages=find:
install_requires =
    snek5000 >= 0.8.0rc1

[options.entry_points]
snek5000.solvers =
    tgv = snek5000_tgv.solver

[options.packages.find]
where=src

[options.package_data]
snek5000_tgv = templates/*.j2, *.usr.f, *.par.cfg, Snakefile, etc/*.yml
