[metadata]
name = snek5000-tgv
description = Taylor-Green vortex
long_description = file: README.md
long_description_content_type = text/markdown
license = ...
license_file = LICENSE

[options]
package_dir=
    =src
packages=find:
install_requires =
    snek5000 >= 0.9.0rc3

[options.entry_points]
snek5000.solvers =
    tgv = snek5000_tgv.solver

[options.packages.find]
where=src

[options.package_data]
snek5000_tgv = *.usr.f, *.par.cfg, Snakefile, etc/*.yml
